<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_your_account">Create your account</string>
    <string name="errorEmail">Please make sure email has been entered</string>
    <string name="errorPassword">Please make sure password has been entered</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="product_list">Store</string>
    <string name="contact">Contact</string>
    <string name="about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nunc
felis, suscipit vitae ipsum quis, rhoncus commodo nulla. Suspendisse sed ornare felis, et congue
ligula. Donec lobortis arcu eget mi feugiat, ut posuere massa vehicula. Praesent iaculis, quam
eget ornare scelerisque, velit purus hendrerit nibh, id porta nibh lacus eleifend felis. Donec
non turpis tempor, dapibus elit eget, aliquam orci. Mauris quis diam eget mauris egestas
faucibus.
\n\nNullam accumsan, lacus et eleifend eleifend, sem enim tincidunt enim, sed ullamcorper arcu orci eu nisl. Praesent eu volutpat enim.</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email_address">shoestore@fake.com</string>
    <string name="phone_number">+1–202–555–0130</string>
    <string name="address_value">2932 Richards Avenue - Tracy, CA</string>
    <string name="logout">Logout</string>
    <string name="favorite">Like</string>
    <string name="share">Share</string>
    <string name="empty_list">Shoes List is Empty</string>
    <string name="best_seller">Best Seller of 2021</string>
    <string name="instruction_subtitle">Read the instructions below</string>
    <string name="show_case">Take a look to our products</string>
    <string name="instruction_navigation">Take a look to the instructions</string>
    <string name="welcome_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sapien libero, auctor a ex at, varius egestas nibh. Curabitur accumsan elementum orci eu mattis. Nam non porttitor quam, quis condimentum sapien. Aliquam sit amet fermentum nisi, ac scelerisque augue.</string>
    <string name="product_details">Product Details</string>
    <string name="product_description">This low-heeled hook-and-eye sandal is made from dark turquoise denim.  It has a sleek appearance.  It is accented with beads and a large bow.</string>
    <string name="size_label">Size</string>
    <string name="shoe_size_format">%.1f</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="product_description_label">Description</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="errorShoeName">Please make sure a shoe name has been entered</string>
    <string name="errorBrandName">Please make sure a brand name has been entered</string>
    <string name="errorSize">Please make sure a valid size has been entered</string>
    <string name="errorDescription">Please make sure a description has been entered</string>
    <string name="add_product">Add Product</string>
    <string name="product_image">Product Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_newlist">newlist</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
