<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    android:label="@string/welcome"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.index.WelcomeFragment"
        android:label="@string/welcome_text"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.index.InstructionsFragment"
        android:label="InstructionsFragment"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment2"
            app:destination="@id/shoeListFragment2" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment2"
        android:name="com.udacity.shoestore.products.ShoeListFragment"
        android:label="ShoeListFragment"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeListFragment2_to_shoeDetails"
            app:destination="@id/shoeDetails" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetails"
        android:name="com.udacity.shoestore.products.ShoeDetails"
        android:label="ShoeDetails">
        <action
            android:id="@+id/action_shoeDetails_to_shoeListFragment2"
            app:destination="@id/shoeListFragment2"
            app:popUpTo="@id/shoeListFragment2"
            app:popUpToInclusive="false" />
    </fragment>
</navigation>