<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="shoeListViewModel"
            type="com.udacity.shoestore.products.ShoeListViewModel" />
    </data>

    <!--    This screen is simples; however, I choose a Constraint Layout due to  -->
    <!--    the fact that it gives me a better alignment and control over         -->
    <!--    the buttons position.                                                 -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/compose_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_light">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_shoe"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/shoe_name"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoe_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:text="@={shoe.name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/subject_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/divider"
            android:contentDescription="@null"
            app:backgroundTint="@color/black_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/brand_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/brand_name"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subject_divider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/brand_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:text="@={shoe.company}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/sender_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/divider"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brand_name_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/size_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/size_label"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sender_divider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/size_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:inputType="numberDecimal"
                android:text="@={shoe.size}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/recipient_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/divider"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/product_description_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipient_divider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="start"
                android:minLines="6"
                android:text="@={shoe.description}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:lineHeight="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_text"
            android:onClick="@{() -> shoeListViewModel.saveProduct(shoe)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/description_label" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_text"
            android:background="@color/white_text_color"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>